--- a/frontend/src/components/Counter/Counter.module.css
+++ b/frontend/src/components/Counter/Counter.module.css
@@ -3,7 +3,7 @@
   align-items: center;
   width: 200px;
   height: 58px;
-  border: 1px solid #DDDDDD;
+  border: 1px solid #dddddd;
   border-radius: 6px;
   flex-shrink: 0;
 }
@@ -17,50 +17,26 @@
   margin: 0;
   border: none;
   border-radius: 6px;
-  color: #DDDDDD;
+  color: #dddddd;
   transition: all 0.2s;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .counterContainer button:hover {
-  background-color: #DDDDDD;
+  background-color: #dddddd;
 }
 
 .counterContainer > *:first-child {
-  border-right: 1px solid #DDDDDD;
+  border-right: 1px solid #dddddd;
   position: relative;
-}
-
-.counterContainer > *:first-child::after {
-  content: '';
-  display: inline-block;
-  width: 24px;
-  height: 24px;
-  background-image: url('../../assets/icons/minus.svg');
-  background-size: contain;
-  background-repeat: no-repeat;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
 }
 
 .counterContainer > *:last-child {
-  border-left: 1px solid #DDDDDD;
+  border-left: 1px solid #dddddd;
   position: relative;
-}
-
-.counterContainer > *:last-child::after {
-  content: '';
-  display: inline-block;
-  width: 24px;
-  height: 24px;
-  background-image: url('../../assets/icons/plus.svg');
-  background-size: contain;
-  background-repeat: no-repeat;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
 }
 
 .quantityInput {
@@ -71,13 +47,11 @@
   font-size: 18px;
   height: 55px;
 
-  border-left: 1px solid #DDDDDD;
-  border-right: 1px solid #DDDDDD;
- 
-
+  border-left: 1px solid #dddddd;
+  border-right: 1px solid #dddddd;
 }
-input[type=number]::-webkit-outer-spin-button,
-input[type=number]::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
+input[type='number']::-webkit-outer-spin-button,
+input[type='number']::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
