--- a/frontend/src/components/Categories/Categories.module.css
+++ b/frontend/src/components/Categories/Categories.module.css
@@ -55,7 +55,7 @@
 /* Медиа-запрос для экранов до 576px */
 @media (max-width: 576px) {
   .gridCategoriesContainer {
-    grid-template-columns: repeat(1fr, 1fr);
+    grid-template-columns: repeat(1, 1fr);
     gap: 16px;
   }
 
@@ -66,7 +66,6 @@
   .categoryName {
     font-size: 16px;
   }
-  .categories h2{}
 }
 
 /* Медиа-запрос для экранов до 350px */
