--- a/frontend/src/components/ModalBlock/ModalBlock.module.css
+++ b/frontend/src/components/ModalBlock/ModalBlock.module.css
@@ -10,24 +10,22 @@
   align-items: center;
   justify-content: center;
   z-index: 1000;
- 
 }
 
 .ModalContent {
   position: relative;
-  background-image: url('https://media.istockphoto.com/id/1494579352/de/foto/britische-kurzhaarkatze-auf-marmor-k%C3%BCchentisch.jpg?s=612x612&w=0&k=20&c=GAaDVhEVOmKl8iRs6nURh_fpHcM535V5w8qWA6iQ3Qs=');
-  background-repeat: no-repeat;
-  background-position: center; 
-  color: #222121;
+  background-position: center;
   padding: 32px 92px 32px 32px;
   border-radius: 12px;
   max-width: 648px;
-  height: 300px;
-  border-radius:8px;
+  height: 236px;
+  border-radius: 8px;
   width: 100%;
   font-size: 20px;
   font-weight: 600;
   line-height: 24px;
+  color: #ffffff;
+  background-color: #2642df;
 }
 
 .ModalContent h2 {
@@ -35,10 +33,11 @@
   font-weight: 600;
   line-height: 30px;
   margin-bottom: 4px;
-  text-align: center;
+  text-align: left;
 }
-.ModalContent p{
-  text-align: center;}
+.ModalContent p {
+  text-align: left;
+}
 
 .ModalContent p:not(:last-child) {
   margin-bottom: 15px;
@@ -54,12 +53,12 @@
   background: none;
   padding: 0;
   margin: 0;
-  color: #FFFFFF;
+  color: #ffffff;
   transition: all 0.2s;
   opacity: 0.5;
 }
 
 .CloseButton:hover {
-  color: #FFFFFF;
+  color: #ffffff;
   opacity: 1;
 }
